[project]
name = "ai-agent"
version = "0.1.0"
description = "learn how to build an AI agent"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.24",
    "langgraph>=0.3.34",
    "langsmith>=0.3.34",
    "loguru>=0.7.3",
    "python-dotenv>=1.1.0",
    "sse-starlette>=2.3.3",
    "uvicorn>=0.34.2",
]
